# app/controllers/book_controller.go
@@ -18,7 +18,7 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200 {array} models.Book
-// @Router /v1/books [get]
+// @Router /api/v1/books [get]
 func GetBooks(c *fiber.Ctx) error {
 	// Create database connection.
 	db, err := database.OpenDBConnection()
